[MJLINK-64] add quoting on forking